[metadata]
name = sanascan-backend
version = 0.1.0
author = wbydo
author_email = wbydo@users.noreply.github.com
description =
url = git clone https://wbydo@bitbucket.org/wbydo/sanascan-backend.git
license = MIT

[options]
include_package_data = True
packages = find:

[option.packages.find]
exclude =
